<resources>
    <string name="app_name">IconTest2</string>
    <string name="game_view_content_description">Game View</string>
    <string name="kakao_native_key">7147a999af58921ffcba467af8dd0aa3</string>
    <string name="kakao_native_key_manifest">kakao7147a999af58921ffcba467af8dd0aa3</string>
    <string name="mapbox_access_token">sk.eyJ1IjoibWluaHllb2s5OSIsImEiOiJjbGdkOXJuZXAwNmptM2RxM2IwN2F4bmliIn0.UE22dbrN4IlDPGZRYkm0vg</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="map">맵</string>
    <string name="mypage">마이페이지</string>
    <string name="fragment_home_string">홈 화면입니다</string>
    <string name="google_maps_key">AIzaSyAfDznPBrCCvtjUjv5h4ItjSWpaHsBrFyE</string>
    <string name="food_order_quantity">%s개</string>
    <string name="food_order_amount">%s원</string>
    <string name="order_waiting_time">%s:%s</string>
    <string name="order_waiting_seq">주문번호 :  %s</string>
    <string name="order_waiting_total_amount">총 %s원</string>
    <string name="order_waiting_total_quantity">총 메뉴 %s개</string>
    <string name="order_date">%s-%s-%s     %s:%s</string>
    <string name="order_waiting_btn_text">주문대기\n%s</string>
    <string name="order_processing_btn_text">처리중\n%s</string>
    <string name="order_complete_btn_text">완료\n%s</string>
    <string-array name="category">
        <item>카테고리를 선택해 주세요.</item>
        <item>1. 붕어빵</item>
        <item>2. 타코야끼</item>
        <item>3. 닭꼬치</item>
        <item>4. 떡볶이</item>
        <item>5. 스테이크</item>
        <item>6. 토스트</item>
        <item>7. 햄버거</item>
        <item>8. 츄러스</item>
        <item>9. 초밥</item>
        <item>10. 아이스크림</item>
    </string-array>
</resources>