<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/order_complete_seq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_waiting_seq"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_gravity="end"/>
        <TextView
            android:id="@+id/order_complete_total_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_waiting_total_quantity"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/order_complete_food_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/order_complete_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_waiting_total_amount"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/order_complete_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_date"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bright_gray"/>

</LinearLayout>