<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/order_waiting_time_tv"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_waiting_time"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--

            -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                >
                <LinearLayout
                    android:id="@+id/parent1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:weightSum="7"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/order_waiting_seq"
                            android:layout_weight="2.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/order_waiting_seq"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="16sp"/>
                        <View
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:id="@+id/order_waiting_detail"
                            android:layout_weight="2.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="상세보기"
                            android:textColor="@color/black"/>
                        <View
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_expand1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/order_waiting_total_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="총 메뉴 3개"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/order_waiting_food_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="오리지널 팥 붕어빵(3개) 1개\n대세는 슈크림 붕어빵(3개) 2개"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/order_waiting_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_waiting_total_amount"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <LinearLayout
                android:weightSum="7"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/order_waiting_refuse_btn"
                    android:layout_weight="2.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="거절"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/bright_red"/>
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/order_waiting_accept_btn"
                    android:layout_weight="2.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="수락"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/bright_blue"
                    android:layout_gravity="end"/>
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bright_gray"
        android:layout_marginTop="10dp"/>
</LinearLayout>